--- a/Project-Duo/test/fixtures/games.yml
+++ b/Project-Duo/test/fixtures/games.yml
@@ -4,10 +4,12 @@ one:
   title: MyString
   description: MyText
   price: 1
-  user_id: 1
+  user: one
+  genre: one
 
 two:
   title: MyString
   description: MyText
   price: 1
-  user_id: 1
+  user: two
+  genre: two
